--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -9,4 +9,9 @@
     <string name="tab_text_3">Tab 3</string>
     <string name="action_settings">Settings</string>
     <string name="section_format">Hello World from section: %1$d</string>
+    <string name="email">이메일</string>
+    <string name="password">비밀번호</string>
+    <string name="SignIn">로그인</string>
+    <string name="forgotAccount">비밀번호 찾기</string>
+    <string name="newAccount">새 계정 만들기</string>
 </resources>
